add slack endpoint challenge
