# openapi.yaml
@@ -23,6 +23,9 @@ paths:
             schema:
               type: object
               properties:
+                challenge:
+                  description: An optional field used by Slack for endpoint verification
+                  type: string
                 team_id:
                   description: The team id
                   type: string
@@ -108,6 +111,9 @@ components:
         application/json:
           schema:
             properties:
+              challenge:
+                description: An optional field used by Slack for endpoint verification
+                type: string
               accepted:
                 description: Determines whether the prompt was accepted
                 type: boolean
